tests/suite/fail/generated/borrow/fail_move_use_data.ny
fn use(x: string) -> void { print(x) }
fn main() {
    let data = "hello"
    use(data)
    print(data) //~ ERROR was moved
}
